# claude-flow

./: .coverage  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
claude_flow/: CLAUDE.md  __init__.py  chat.py  cli.py  config.py  models.py  monitor.py  planner.py  progress.py  pty_manager.py  task_manager.py  usage.py  utils.py  worker.py  worktree.py
claude_flow/web/: __init__.py  api.py  app.py  ws.py
docs/: fix-plan-review-terminal.md  flowchart.md  submodule-worktree-guide.md  usage.md
docs/plans/: 2026-03-05-claude-flow-design.md  2026-03-05-claude-flow-impl.md  2026-03-05-web-full-workflow.md  2026-03-06-mobile-tab-view.md  2026-03-06-plan-feedback-workflow-design.md  2026-03-06-plan-feedback-workflow.md  2026-03-06-token-usage-stats-design.md  2026-03-09-chat-from-planned-status-transition.md  2026-03-09-chat-status-feedback.md  2026-03-09-integration-tests.md  2026-03-09-merge-lock-design.md  2026-03-09-merge-lock-impl.md  2026-03-09-mini-task.md  2026-03-09-overview-dashboard.md  2026-03-09-sidebar-all-tasks-management.md  2026-03-09-task-detail-page.md  2026-03-09-test-restructure.md  2026-03-09-token-usage-stats.md  2026-03-09-vertical-sidebar-layout.md  2026-03-11-worker-subagent-design.md  2026-03-11-worker-subagent-impl.md
tests/: CLAUDE.md  conftest.py  test_chat.py  test_cli.py  test_integration.py  test_mini_task.py  test_mini_task_integration.py  test_non_git.py  test_planner.py  test_pty_manager.py  test_usage.py  test_web_api.py  test_worker.py  test_worktree.py
tests/boundary/: test_boundary_inputs.py  (+2 more)
tests/e2e/: conftest.py  (+3 more)
(+27 files in other folders)
