[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-flow"
version = "0.1.0"
description = "Multi-instance Claude Code workflow manager"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
cf = "claude_flow.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
